--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "knex": "^0.9.0",
     "morgan": "~1.6.1",
     "pg": "^4.4.3",
+    "request": "^2.67.0",
+    "requests": "^0.1.7",
     "serve-favicon": "~2.3.0"
   }
 }
